# AgentBench-TR

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: planner.py  search.py  synthesizer.py  validator.py
api/: main.py  schemas.py
api/routes/: metrics.py  query.py
dashboard/: app.py
dashboard/components/: consistency_chart.py  cost_chart.py  failure_heatmap.py  trace_table.py
data/: eval_questions.json  preprocess.py
data/processed/: AdvancedNetworkNotlarım_cleaned.txt  AeroGuard_README_cleaned.txt  AttentionIsAllYouNeed_cleaned.txt  BERTURK_README_cleaned.txt  IntroToAINotlarım_cleaned.txt  LANGCHAIN_README_cleaned.txt  LANGGRAPH_README_cleaned.txt  Multimodal_LLM_Paper_cleaned.txt  THQuAD_cleaned.txt
eval/: consistency.py  cost_tracker.py  failure_taxonomy.py  hallucination.py  latency.py
graph/: pipeline.py  state.py
notebooks/: 01_EDA.ipynb  02_retrieval_benchmark.ipynb  03_agent_smoke_test.ipynb  04_eval_analysis.ipynb  05_failure_analysis.ipynb
results/: eval_results.csv  failure_taxonomy.csv  generate_figures.py  retrieval_benchmark.csv
retrieval/: bm25_index.py  hybrid.py  vector_store.py
storage/: base.py  database.py  models.py  trace_store.py
tests/: test_agents.py  test_eval.py  test_retrieval.py
