[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbench-tr"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graph*", "retrieval*", "eval*", "storage*", "api*", "dashboard*"]